@@ -1,6 +1,8 @@
 #include "item.hh"
 #include "spanner.hh"
+#include "paper-column.hh"
 
+extern "C" {
 // thanks to GDBs wonderful casting abilities, we need these:
 Item*
 to_item (Grob* g)
@@ -11,4 +13,11 @@ Spanner*
 to_spanner (Grob*g)
 {
   return dynamic_cast<Spanner*> (g);
+}
+
+Paper_column*
+to_pc (Grob* g)
+{
+  return dynamic_cast<Paper_column*> (g);
+}
 }
